// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogList renders blog list with a single blog 1`] = `
<section
  className="jsx-526258296"
>
  <div
    className="blog-card-mock"
  />
</section>
`;

exports[`BlogList renders empty blog list when blog list is empty array 1`] = `
<section
  className="jsx-526258296"
>
  
</section>
`;

exports[`BlogList renders empty blog list when blog list is undefined 1`] = `
<section
  className="jsx-526258296"
>
  
</section>
`;
